# QxFx0Rust

./: .gitignore  Cargo.toml  README.md
.agent2048/: memory.db
.github/workflows/: ci.yml
qxfx0-cli/: Cargo.toml
qxfx0-cli/src/: lib.rs  main.rs
qxfx0-commitment/: Cargo.toml
qxfx0-commitment/src/: lib.rs
qxfx0-governance/: Cargo.toml
qxfx0-governance/src/: lib.rs
qxfx0-guard/: Cargo.toml
qxfx0-guard/src/: lib.rs
qxfx0-morphology/: Cargo.toml
qxfx0-morphology/src/: lib.rs
qxfx0-persistence/: Cargo.toml
qxfx0-persistence/src/: lib.rs
qxfx0-pipeline/: Cargo.toml
qxfx0-pipeline/src/: lib.rs
qxfx0-render/: Cargo.toml
qxfx0-render/src/: lib.rs
qxfx0-self/: Cargo.toml
qxfx0-self/src/: lib.rs
qxfx0-semantic/: Cargo.toml
qxfx0-semantic/src/: composer.rs  gate.rs  lib.rs  pathfinder.rs  proposition.rs  seed.rs
qxfx0-semantic/tests/: seed_test.rs
qxfx0-types/: Cargo.toml
qxfx0-types/src/: atom.rs  field.rs  frame.rs  illocutionary_force.rs  lib.rs  move_family.rs  proposition_type.rs  relation_type.rs  semantic_intent.rs  system_state.rs
