[package]
name = "qxfx0-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "qxfx0"
path = "src/main.rs"

[dependencies]
qxfx0-types = { path = "../qxfx0-types" }
qxfx0-self = { path = "../qxfx0-self" }
qxfx0-semantic = { path = "../qxfx0-semantic" }
qxfx0-commitment = { path = "../qxfx0-commitment" }
qxfx0-morphology = { path = "../qxfx0-morphology" }
qxfx0-persistence = { path = "../qxfx0-persistence" }
qxfx0-governance = { path = "../qxfx0-governance" }
qxfx0-guard = { path = "../qxfx0-guard" }
qxfx0-render = { path = "../qxfx0-render" }
qxfx0-pipeline = { path = "../qxfx0-pipeline" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
