[package]
name = "qxfx0-persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
qxfx0-types = { path = "../qxfx0-types" }
qxfx0-semantic = { path = "../qxfx0-semantic" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
