[package]
name = "qxfx0-pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
qxfx0-types = { path = "../qxfx0-types" }
qxfx0-self = { path = "../qxfx0-self" }
qxfx0-semantic = { path = "../qxfx0-semantic" }
qxfx0-commitment = { path = "../qxfx0-commitment" }
qxfx0-guard = { path = "../qxfx0-guard" }
qxfx0-render = { path = "../qxfx0-render" }
qxfx0-governance = { path = "../qxfx0-governance" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
